# dremio-load

./: .dockerignore  .gitignore  Dockerfile  README.md  USER_GUIDE.md  config.example.yml  docker-compose.yml  main.py  requirements.txt
cli/: pyproject.toml
cli/dl/: cli.py  client.py  config.py  output.py
cli/dl/commands/: context.py  health.py  jobs.py  runs.py  schedule.py  target.py
core/: alert_manager.py  copy_into.py  dremio_sink.py  engine.py  event.py  iceberg_sink.py  masking.py  notifier.py  offset_store.py  schema_store.py  secrets.py  ts_trigger.py
docs/: VISUAL_GUIDE.html
sources/: azure_blob.py  base.py  cassandra.py  clickhouse.py  cosmosdb.py  databricks.py  delta.py  dynamodb.py  gcs.py  google_ads.py  hubspot.py  hudi.py  linkedin_ads.py  mongodb.py  mysql.py  oracle.py  pinot.py  postgres.py  s3.py  salesforce.py  snowflake.py  spanner.py  splunk.py  sqlserver.py  zendesk.py
tests/: test_ad_sources.py  test_new_sources.py
ui/backend/: app.py  scheduler.py  store.py
ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
ui/frontend/src/: App.tsx  index.css
ui/frontend/src/api/: client.ts
ui/frontend/src/components/: AgentPage.tsx  CopyIntoPage.tsx  ExplorerPage.tsx  HealthPage.tsx  JobModal.tsx  JobsPage.tsx  PipelineDetailPage.tsx  PipelinePage.tsx  RunsPage.tsx  SchedulerPage.tsx  SettingsPage.tsx  TargetPage.tsx
