[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dremio-load-cli"
version = "1.0.0"
description = "CLI for Dremio Load — agent-first data ingestion control"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
dl = "dl.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dl*"]
